more fix to java 8